# solana-job-queue

./: .gitignore  Anchor.toml  Dockerfile.worker  README.md  build_output.txt  build_output_utf8.txt  error-utf8.txt  error.txt  package-lock.json  package.json  railway.toml  rename.py  render.yaml  test_error.txt  test_error_utf8.txt  tsconfig.json  tsconfig.worker.json
app/: .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.js
app/src/: App.tsx  CreateJobForm.tsx  decqueue-core.ts  main.tsx  polyfills.ts  react-shim.d.ts  solana-provider.d.ts  solana.ts  solqueue-core.ts  useSolanaWallet.ts
app/src/idl/: dec_queue.json  sol_queue.json
client/: fee-strategy.ts  index.ts  worker.ts
program/: Cargo.toml
program/src/: errors.rs  events.rs  lib.rs  state.rs
scripts/: prepare-localnet.js  run-anchor.js  run-client.js  run-tests.js  run-worker.js
shared/: decqueue-core.ts  solqueue-core.ts
tests/: dec_queue.ts  sol_queue.ts
trident-tests/: Cargo.toml  Trident.toml
trident-tests/fuzz_0/: fuzz_accounts.rs  test_fuzz.rs
