[package]
name = "sol-queue"
version = "0.1.0"
description = "On-Chain Job Queue — rebuild of Bull/Redis/SQS as a Solana Anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_queue"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"

[patch.crates-io]
anchor-syn = { path = "../vendor/anchor-syn" }
