[package]
name = "sol-queue"
version = "0.1.0"
description = "On-Chain Job Queue — rebuild of Bull/Redis/SQS as a Solana Anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_queue"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"

# ─── ZK Compression (light-sdk) ──────────────────────────────────────────────
# BLOCKED on crate version conflict:
#
#   anchor-lang 0.30.1  pins  solana-instruction = "=2.2.1"
#   light-sdk   0.23.0  needs  solana-instruction = "^2.3"
#
# These two constraints are mutually exclusive — Cargo cannot resolve both
# in the same compilation unit. The two resolution paths are:
#
#   Option A — Wait for Anchor 0.31+:
#     Anchor 0.31 is expected to track Solana SDK 2.3+. Once released,
#     uncomment the line below and delete this comment.
#
#   Option B — Upgrade to Anchor 0.31 pre-release / fork:
#     Replace `anchor-lang = "0.30.1"` above with the Anchor 0.31 pre-release
#     crate and uncomment light-sdk below.
#
# Uncomment when anchor-lang >= 0.31 (Solana SDK 2.3 compatible) is available:
# light-sdk = { version = "0.23.0", features = ["anchor", "cpi-context"] }

[patch.crates-io]
anchor-syn = { path = "../vendor/anchor-syn" }
